# python-template

./: pyproject.toml
src/todo/: todo.py
tests/: conftest.py
tests/todo/: todo_test.py
